[package]
name = "agentz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
dotenvy = "0.15.7"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = "1.0.111"